# nbdev-hello-world

./: core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml
nbdev_hello_world/: _modidx.py  core.py  nbdev_hello_world.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
